--- a/06-Ingress.yaml
+++ b/06-Ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: bookinfo23.targetcluster-1303bf06b541565e09085cf582022ff2-0000.jp-tok.containers.appdomain.cloud
+  - host: bookinfo23.apps.ocp1.local
     http:
       paths:
       - path: /
